fix: color related variable names ready for dark mode

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,11 +5,11 @@
 
   --primary-color: #edf2f8;
   --secondary-color: #057fcc;
-  --black-color: #030303;
   --lightgray-color: #e4e4e4;
   --gray-color: #6b7688;
   --brown-color: #46364a;
-  --white-color: #ffffff;
+  --base-bg-color: #ffffff;
+  --base-font-color: #030303;
 }
 
 * {
